syntax = "proto3";

message PlayerMessage {
    int32 id = 1;
    string first_name = 2;
    string last_name = 3;
    optional string email = 4;
}